Align event hooks closely to datalabels plugin

--- a/samples/box.html
+++ b/samples/box.html
@@ -130,7 +130,6 @@
 					plugins: {
 						annotation: {
 							drawTime: 'afterDraw',
-							events: ['dblclick'],
 							annotations: [{
 								type: 'box',
 								xScaleID: 'x',
@@ -142,9 +141,9 @@
 								backgroundColor: 'rgba(101, 33, 171, 0.5)',
 								borderColor: 'rgb(101, 33, 171)',
 								borderWidth: 1,
-								onDblclick(e) {
-									console.log('Box', e.type, this);
-								}
+								click(context) {
+									console.log('Annotation', context);
+								},
 							}]
 						}
 					}
