--- a/samples/bubble.html
+++ b/samples/bubble.html
@@ -121,7 +121,6 @@
 					plugins: {
 						annotation: {
 							drawTime: 'beforeDatasetsDraw',
-							events: ['dblclick'],
 							annotations: [{
 								type: 'box',
 								xScaleID: 'x',
@@ -133,8 +132,8 @@
 								backgroundColor: 'rgba(101, 33, 171, 0.5)',
 								borderColor: 'rgb(101, 33, 171)',
 								borderWidth: 1,
-								onDblclick(e) {
-									console.log('Box', e.type, this);
+								dblclick(context) {
+									console.log('Box', context);
 								}
 							}]
 						}
