--- a/samples/pie.html
+++ b/samples/pie.html
@@ -53,7 +53,6 @@
 				plugins: {
 					annotation: { // not supported, and should not display or error
 						drawTime: 'beforeDatasetsDraw',
-						events: ['dblclick'],
 						annotations: [{
 							type: 'box',
 							xScaleID: 'x',
@@ -65,8 +64,8 @@
 							backgroundColor: 'rgba(101, 33, 171, 1.0)',
 							borderColor: 'rgb(101, 33, 171)',
 							borderWidth: 1,
-							onDblclick(e) {
-								console.log('Box', e.type, this);
+							dblclick(context) {
+								console.log('Box', context);
 							}
 						}]
 					}
