--- a/samples/bar.html
+++ b/samples/bar.html
@@ -79,7 +79,9 @@
 					plugins: {
 						annotation: {
 							drawTime: 'afterDatasetsDraw',
-							events: ['click'],
+							click(context) {
+								console.log('Annotation', context);
+							},
 							annotations: [{
 								id: 'hline',
 								type: 'line',
@@ -93,10 +95,6 @@
 									content: 'Test Label',
 									enabled: true
 								},
-								onClick(e) {
-									// The annotation is is bound to the `this` variable
-									console.log('Annotation', e.type, this);
-								}
 							}, {
 								id: 'vline',
 								type: 'line',
@@ -110,10 +108,6 @@
 									content: 'Test Label',
 									enabled: true
 								},
-								onClick(e) {
-									// The annotation is is bound to the `this` variable
-									console.log('Annotation', e.type, this);
-								}
 							}, {
 								id: 'vline-rotated',
 								type: 'line',
@@ -128,10 +122,6 @@
 									enabled: true,
 									rotation: -90
 								},
-								onClick(e) {
-									// The annotation is is bound to the `this` variable
-									console.log('Annotation', e.type, this);
-								}
 							}, {
 								drawTime: 'beforeDatasetsDraw',
 								type: 'box',
@@ -144,9 +134,6 @@
 								backgroundColor: 'rgba(101, 33, 171, 0.5)',
 								borderColor: 'rgb(101, 33, 171)',
 								borderWidth: 1,
-								onClick(e) {
-									console.log('Box', e.type, this);
-								}
 							}]
 						}
 					}
