--- a/samples/labels.html
+++ b/samples/labels.html
@@ -133,7 +133,6 @@
 					},
 					plugins: {
 						annotation: {
-							events: ['click'],
 							annotations: [{
 								id: 'hline',
 								type: 'line',
@@ -148,9 +147,9 @@
 									content: 'This is a long test label',
 									enabled: true
 								},
-								onClick(e) {
+								click(context) {
 									// The annotation is is bound to the `this` variable
-									console.log('Annotation', e.type, this);
+									console.log('Annotation', context);
 								}
 							},
 							{
@@ -168,9 +167,9 @@
 									content: 'This is a another test label',
 									enabled: true
 								},
-								onClick(e) {
+								click(context) {
 									// The annotation is is bound to the `this` variable
-									console.log('Annotation', e.type, this);
+									console.log('Annotation', context);
 								}
 							}]
 						}
