--- a/samples/line-logarithmic.html
+++ b/samples/line-logarithmic.html
@@ -76,7 +76,6 @@
 				},
 				plugins: {
 					annotation: {
-						events: ['click'],
 						annotations: [{
 							drawTime: 'afterDraw',
 							id: 'hline',
@@ -91,9 +90,9 @@
 								content: 'Test Label',
 								enabled: true
 							},
-							onClick(e) {
+							click(context) {
 								// The annotation is is bound to the `this` variable
-								console.log('Annotation', e.type, this);
+								console.log('Annotation', context);
 							}
 						}, {
 							drawTime: 'afterDraw',
@@ -109,9 +108,9 @@
 								content: 'Test Label',
 								enabled: true
 							},
-							onClick(e) {
+							click(context) {
 								// The annotation is is bound to the `this` variable
-								console.log('Annotation', e.type, this);
+								console.log('Annotation', context);
 							}
 						}, {
 							drawTime: 'beforeDatasetsDraw',
@@ -125,8 +124,8 @@
 							backgroundColor: 'rgba(101, 33, 171, 0.5)',
 							borderColor: 'rgb(101, 33, 171)',
 							borderWidth: 1,
-							onClick(e) {
-								console.log('Box', e.type, this);
+							click(context) {
+								console.log('Box', context);
 							}
 						}]
 					}
