Fixes for demos
The mouseover event didn't work, because Chart.js doesn't fire mouseover events by default. If I understand correctly, mouseover isn't really what we want; that's fired once when the mouse moves over the chart as a whole, but we need to evaluate whether it moves over individual annotation elements.

Change the demo line value from 120 to 10. 120 is usually (always?) outside of the range of the randomly generated data, so it wasn't visible.

Accessing `element.chartInstance.chart.canvas` failed, but accessing `element.chartInstance.canvas` works.

--- a/samples/horizontal-line.html
+++ b/samples/horizontal-line.html
@@ -129,12 +129,12 @@
 					},
 					plugins: {
 						annotation: {
-							events: ['click', 'dblclick', 'mouseover', 'mouseout'],
+							events: ['click', 'dblclick', 'mousemove', 'mouseout'],
 							annotations: [{
 								type: 'line',
 								mode: 'horizontal',
 								scaleID: 'y',
-								value: 120,
+								value: 10,
 								borderColor: 'rgba(255, 0, 0, 0.5)',
 								borderWidth: 4,
 								label: {
@@ -163,13 +163,13 @@
 										element.chartInstance.draw();
 									}, 500);
 								},
-								onMouseover(e) {
+								onMousemove(e) {
 									const element = this;
 									element.options.borderWidth = 7;
 									element.options.label.enabled = true;
 									element.options.label.content = e.type;
 									element.chartInstance.draw();
-									element.chartInstance.chart.canvas.style.cursor = 'pointer';
+									element.chartInstance.canvas.style.cursor = 'pointer';
 								},
 								onMouseout(e) {
 									const element = this;
@@ -181,7 +181,7 @@
 										element.options.label.enabled = false;
 										element.chartInstance.draw();
 									}, 500);
-									element.chartInstance.chart.canvas.style.cursor = 'initial';
+									element.chartInstance.canvas.style.cursor = 'initial';
 								}
 							}]
 						}
