--- a/samples/labels.html
+++ b/samples/labels.html
@@ -162,7 +162,7 @@
 								label: {
 									position: 'bottom',
 									yAdjust: 100,
-									content: 'This is a another test label',
+									content: 'This is another test label',
 									enabled: true
 								},
 								click(context) {
