Align event hooks with to datalabels plugin (#239)
* Align event hooks closely to datalabels plugin

* Remove dead code

* Fix handleEvent chart param

* Update readme

* Remove chartInstance

* Add .editorconfig

* Remove `id` from annotations

* Add migration guide

* Review update

* Fix label text

--- a/samples/bar.html
+++ b/samples/bar.html
@@ -79,9 +79,10 @@
 					plugins: {
 						annotation: {
 							drawTime: 'afterDatasetsDraw',
-							events: ['click'],
+							click(context) {
+								console.log('Annotation', context);
+							},
 							annotations: [{
-								id: 'hline',
 								type: 'line',
 								mode: 'horizontal',
 								scaleID: 'y',
@@ -93,12 +94,7 @@
 									content: 'Test Label',
 									enabled: true
 								},
-								onClick(e) {
-									// The annotation is is bound to the `this` variable
-									console.log('Annotation', e.type, this);
-								}
 							}, {
-								id: 'vline',
 								type: 'line',
 								mode: 'vertical',
 								scaleID: 'x',
@@ -110,12 +106,7 @@
 									content: 'Test Label',
 									enabled: true
 								},
-								onClick(e) {
-									// The annotation is is bound to the `this` variable
-									console.log('Annotation', e.type, this);
-								}
 							}, {
-								id: 'vline-rotated',
 								type: 'line',
 								mode: 'vertical',
 								scaleID: 'x',
@@ -128,10 +119,6 @@
 									enabled: true,
 									rotation: -90
 								},
-								onClick(e) {
-									// The annotation is is bound to the `this` variable
-									console.log('Annotation', e.type, this);
-								}
 							}, {
 								drawTime: 'beforeDatasetsDraw',
 								type: 'box',
@@ -144,9 +131,6 @@
 								backgroundColor: 'rgba(101, 33, 171, 0.5)',
 								borderColor: 'rgb(101, 33, 171)',
 								borderWidth: 1,
-								onClick(e) {
-									console.log('Box', e.type, this);
-								}
 							}]
 						}
 					}
