--- a/samples/polar-area.html
+++ b/samples/polar-area.html
@@ -59,6 +59,7 @@
 			},
 			options: {
 				responsive: true,
+				aspectRatio: 2,
 				legend: {
 					position: 'right',
 				},
@@ -79,21 +80,23 @@
 				plugins: {
 					annotation: { // not supported, and should not display or error
 						drawTime: 'beforeDatasetsDraw',
-						annotations: [{
-							type: 'box',
-							xScaleID: 'x',
-							yScaleID: 'y',
-							xMin: -120,
-							xMax: 20,
-							yMin: -120,
-							yMax: 20,
-							backgroundColor: 'rgba(101, 33, 171, 1.0)',
-							borderColor: 'rgb(101, 33, 171)',
-							borderWidth: 1,
-							dblclick(context) {
-								console.log('Box', context);
+						annotations: {
+							myBox: {
+								type: 'box',
+								xScaleID: 'x',
+								yScaleID: 'y',
+								xMin: -120,
+								xMax: 20,
+								yMin: -120,
+								yMax: 20,
+								backgroundColor: 'rgba(101, 33, 171, 1.0)',
+								borderColor: 'rgb(101, 33, 171)',
+								borderWidth: 1,
+								dblclick(context) {
+									console.log('Box', context);
+								}
 							}
-						}]
+						}
 					}
 				}
 			}
