--- a/samples/updates.html
+++ b/samples/updates.html
@@ -92,14 +92,16 @@
 			dataset.pointBorderWidth = 1;
 		});
 
-		const lines = [{
-			type: 'line',
-			mode: 'horizontal',
-			scaleID: 'y',
-			value: randomScalingFactor() + 50,
-			borderColor: randomColor(0.75),
-			borderWidth: 5
-		}];
+		const lines = {
+			myHorizontlLine: {
+				type: 'line',
+				mode: 'horizontal',
+				scaleID: 'y',
+				value: randomScalingFactor() + 50,
+				borderColor: randomColor(0.75),
+				borderWidth: 5
+			}
+		};
 
 		window.onload = function() {
 			const ctx = document.getElementById('canvas').getContext('2d');
@@ -151,19 +153,19 @@
 		};
 
 		function addLine() {
-			window.myScatter.options.plugins.annotation.annotations.push({
+			window.myScatter.options.plugins.annotation.annotations.myHorizontlLine = {
 				type: 'line',
 				mode: 'horizontal',
 				scaleID: 'y',
 				value: randomScalingFactor(),
 				borderColor: randomColor(0.75),
 				borderWidth: 5
-			});
+			};
 			window.myScatter.update();
 		}
 
 		function removeLine() {
-			window.myScatter.options.plugins.annotation.annotations.pop();
+			window.myScatter.options.plugins.annotation.annotations.myHorizontlLine = null;
 			window.myScatter.update();
 		}
 	</script>
