--- a/samples/labels.html
+++ b/samples/labels.html
@@ -133,43 +133,45 @@
 					},
 					plugins: {
 						annotation: {
-							annotations: [{
-								type: 'line',
-								mode: 'horizontal',
-								scaleID: 'y',
-								value: 25,
-								borderColor: 'black',
-								borderWidth: 5,
-								label: {
-									yAdjust: -20,
-									backgroundColor: 'red',
-									content: 'This is a long test label',
-									enabled: true
+							annotations: {
+								myHorizontalLine: {
+									type: 'line',
+									mode: 'horizontal',
+									scaleID: 'y',
+									value: 25,
+									borderColor: 'black',
+									borderWidth: 5,
+									label: {
+										yAdjust: -20,
+										backgroundColor: 'red',
+										content: 'This is a long test label',
+										enabled: true
+									},
+									click(context) {
+										// The annotation is is bound to the `this` variable
+										console.log('Annotation', context);
+									}
 								},
-								click(context) {
-									// The annotation is is bound to the `this` variable
-									console.log('Annotation', context);
+								myVerticalLine: {
+									type: 'line',
+									mode: 'vertical',
+									scaleID: 'x',
+									value: 25,
+									endValue: 45,
+									borderColor: 'red',
+									borderWidth: 5,
+									label: {
+										position: 'bottom',
+										yAdjust: 100,
+										content: 'This is another test label',
+										enabled: true
+									},
+									click(context) {
+										// The annotation is is bound to the `this` variable
+										console.log('Annotation', context);
+									}
 								}
-							},
-							{
-								type: 'line',
-								mode: 'vertical',
-								scaleID: 'x',
-								value: 25,
-								endValue: 45,
-								borderColor: 'red',
-								borderWidth: 5,
-								label: {
-									position: 'bottom',
-									yAdjust: 100,
-									content: 'This is another test label',
-									enabled: true
-								},
-								click(context) {
-									// The annotation is is bound to the `this` variable
-									console.log('Annotation', context);
-								}
-							}]
+							}
 						}
 					}
 				}
