--- a/samples/radar.html
+++ b/samples/radar.html
@@ -80,21 +80,23 @@
 				plugins: {
 					annotation: { // not supported, and should not display or error
 						drawTime: 'beforeDatasetsDraw',
-						annotations: [{
-							type: 'box',
-							xScaleID: 'x',
-							yScaleID: 'y',
-							xMin: randomScalingFactor(),
-							xMax: randomScalingFactor(),
-							yMin: randomScalingFactor(),
-							yMax: randomScalingFactor(),
-							backgroundColor: 'rgba(101, 33, 171, 0.5)',
-							borderColor: 'rgb(101, 33, 171)',
-							borderWidth: 1,
-							dblclick(context) {
-								console.log('Box', context);
+						annotations: {
+							myBox: {
+								type: 'box',
+								xScaleID: 'x',
+								yScaleID: 'y',
+								xMin: randomScalingFactor(),
+								xMax: randomScalingFactor(),
+								yMin: randomScalingFactor(),
+								yMax: randomScalingFactor(),
+								backgroundColor: 'rgba(101, 33, 171, 0.5)',
+								borderColor: 'rgb(101, 33, 171)',
+								borderWidth: 1,
+								dblclick(context) {
+									console.log('Box', context);
+								}
 							}
-						}]
+						}
 					}
 				}
 			}
