Remove annotations array, using an object instead and min/max on value and endValue options (#248)
* Fixes #247

* Fixes Trailing spaces not allowed, Mixed spaces and tabs

* fixes #249

* Reapply the original logic

* Use 'const' instead 'let'

* fixes Operator '+' must be spaced  space-infix-ops

* Reapply the array as possible settings container for annotation

* Fixes indentation of sample in readme

--- a/samples/bubble.html
+++ b/samples/bubble.html
@@ -121,21 +121,23 @@
 					plugins: {
 						annotation: {
 							drawTime: 'beforeDatasetsDraw',
-							annotations: [{
-								type: 'box',
-								xScaleID: 'x',
-								yScaleID: 'y',
-								xMin: randomScalingFactor(),
-								xMax: randomScalingFactor(),
-								yMin: randomScalingFactor(),
-								yMax: randomScalingFactor(),
-								backgroundColor: 'rgba(101, 33, 171, 0.5)',
-								borderColor: 'rgb(101, 33, 171)',
-								borderWidth: 1,
-								dblclick(context) {
-									console.log('Box', context);
+							annotations: [
+								{
+									type: 'box',
+									xScaleID: 'x',
+									yScaleID: 'y',
+									xMin: randomScalingFactor(),
+									xMax: randomScalingFactor(),
+									yMin: randomScalingFactor(),
+									yMax: randomScalingFactor(),
+									backgroundColor: 'rgba(101, 33, 171, 0.5)',
+									borderColor: 'rgb(101, 33, 171)',
+									borderWidth: 1,
+									dblclick(context) {
+										console.log('Box', context);
+									}
 								}
-							}]
+							]
 						}
 					}
 				}
