--- a/samples/autoRotation.html
+++ b/samples/autoRotation.html
@@ -25,7 +25,6 @@ canvas {
 	<script>
 		/* eslint-disable no-undef,no-console */
 		const color = Chart.helpers.color;
-		const lineValue = randomScalingFactor();
 		const barChartData = {
 			labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
 			datasets: [{
@@ -85,8 +84,8 @@ canvas {
 									type: 'line',
 									mode: 'horizontal',
 									scaleID: 'y',
-									value: lineValue,
-									endValue: lineValue + 30,
+									value: 0,
+									endValue: 40,
 									borderColor: 'black',
 									borderWidth: 5,
 									label: {
@@ -100,8 +99,8 @@ canvas {
 									type: 'line',
 									mode: 'vertical',
 									scaleID: 'x',
-									value: 'May',
-									endValue: 'April',
+									value: 'February',
+									endValue: 'January',
 									borderColor: 'black',
 									borderWidth: 5,
 									label: {
@@ -119,14 +118,16 @@ canvas {
 		};
 
 		document.getElementById('straightLine').addEventListener('click', () => {
-			delete window.myBar.options.plugins.annotation.annotations.myHorizontal.endValue;
-			delete window.myBar.options.plugins.annotation.annotations.myVertical.endValue;
+			window.myBar.options.plugins.annotation.annotations.myHorizontal.endValue = 0;
+			window.myBar.options.plugins.annotation.annotations.myVertical.endValue = 'February';
 			window.myBar.update();
 		});
 
 		document.getElementById('obliqueLine').addEventListener('click', () => {
-			window.myBar.options.plugins.annotation.annotations.myHorizontal.endValue = lineValue + 30;
-			window.myBar.options.plugins.annotation.annotations.myVertical.endValue = 'April';
+			const increment = window.myBar.options.plugins.annotation.annotations.myHorizontal.endValue > 0;
+			
+			window.myBar.options.plugins.annotation.annotations.myHorizontal.endValue = increment ? - 40 : + 40
+			window.myBar.options.plugins.annotation.annotations.myVertical.endValue  = increment ? 'March' : 'January';
 			window.myBar.update();
 		});
 
