--- a/samples/line-time-scale.html
+++ b/samples/line-time-scale.html
@@ -5,8 +5,8 @@
 	<title>Line Chart</title>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 	<script src="../node_modules/chart.js/dist/Chart.bundle.js"></script>
-	<script src="../chartjs-plugin-annotation.js"></script>
-	<script src="../node_modules/chart.js/samples/utils.js"></script>
+	<script src="../dist/chartjs-plugin-annotation.js"></script>
+	<script src="./utils.js"></script>
 	<style>
 	canvas {
 		-moz-user-select: none;
