--- a/samples/pie.html
+++ b/samples/pie.html
@@ -4,8 +4,8 @@
 <head>
 	<title>Pie Chart</title>
 	<script src="../node_modules/chart.js/dist/Chart.bundle.js"></script>
-	<script src="../chartjs-plugin-annotation.js"></script>
-	<script src="../node_modules/chart.js/samples/utils.js"></script>
+	<script src="../dist/chartjs-plugin-annotation.js"></script>
+	<script src="./utils.js"></script>
 </head>
 
 <body>
