--- a/samples/radar.html
+++ b/samples/radar.html
@@ -4,8 +4,8 @@ h<!doctype html>
 <head>
 	<title>Radar Chart</title>
 	<script src="../node_modules/chart.js/dist/Chart.bundle.js"></script>
-	<script src="../chartjs-plugin-annotation.js"></script>
-	<script src="../node_modules/chart.js/samples/utils.js"></script>
+	<script src="../dist/chartjs-plugin-annotation.js"></script>
+	<script src="./utils.js"></script>
 	<style>
 	canvas {
 		-moz-user-select: none;
