Fixes eslint issues

--- a/samples/triangle.html
+++ b/samples/triangle.html
@@ -133,7 +133,7 @@
 							annotations: {
 								triangle: {
 									type: 'triangle',
-									orientation: 'bottomLeft', 
+									orientation: 'bottom',
 									xScaleID: 'x',
 									yScaleID: 'y',
 									xMin: -120,
