fixed triangle drawing

--- a/samples/triangle.html
+++ b/samples/triangle.html
@@ -140,9 +140,9 @@
 									xMax: 20,
 									yMin: -120,
 									yMax: 20,
-									backgroundColor: 'rgba(101, 33, 171, 0.5)',
+									backgroundColor: 'transparent',
 									borderColor: 'rgb(101, 33, 171, 0.7)',
-									borderWidth: 2,
+									borderWidth: 3,
 									click(context) {
 										console.log('Annotation', context);
 									}
